--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -78,10 +78,10 @@ a, a:hover {
 	overflow: hidden;
 	box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
 	
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
-	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease !important;
+	-moz-transition: all 0.3s ease !important;
+	-o-transition: all 0.3s ease !important;
+	transition: all 0.3s ease !important;
 }
 
 .header .header-title:hover,
