--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,4 +1,4 @@
-/* "Clarity" by Valerio Lyndon / Revision 18 */
+/* "Clarity" by Valerio Lyndon / Revision 18.3 */
 
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 
@@ -339,7 +339,7 @@ a, a:hover {
 	background: #fff;
 	border-radius: 13px;
 	
-	color: #323232;
+	color: #323232 !important;
 	font: 12px/26px Arial, Verdana !important;
 	
 	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
