--- a/Tilt Theme/Theme.css
+++ b/Tilt Theme/Theme.css
@@ -795,6 +795,7 @@ body[data-query*="\"status\":6"] .image-container { background-image: url(http:/
 	white-space: nowrap;
 	
 	overflow: hidden;
+	z-index: 1;
 }
 .list-table-data:before {
 	content: "";
@@ -806,6 +807,8 @@ body[data-query*="\"status\":6"] .image-container { background-image: url(http:/
 	width: 340px;
 	height: 50px;
 	background: #00150b;
+	
+	z-index: -1;
 }
 
 /* LIST ITEM - CONTENT */
@@ -1065,8 +1068,6 @@ body[data-query*="\"status\":6"] .image-container { background-image: url(http:/
 	left: 9px;
 }
 .data.season, .data.studio {	
-	position: relative;
-	
 	display: inline-block !important;
 	width: 150px;
 	height: 16px;
@@ -1076,10 +1077,25 @@ body[data-query*="\"status\":6"] .image-container { background-image: url(http:/
 	text-align: left !important;
 }
 .data.season {
+	position: relative;
+	
 	margin: 9px 0 0 -9px;
 }
 .data.studio {
 	margin: 25px 0 0 -183px;
+}
+.data.studio:after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    right: 20px;
+
+    display: block;
+    width: 15px;
+    height: 50px;
+    background: linear-gradient(to right,rgba(0,22,9,0),rgb(0,22,9) 80%);
+	
+    transform: skew(30deg);
 }
 
 .data.tags {
@@ -1369,6 +1385,10 @@ body[data-query*="\"status\":6"] .image-container { background-image: url(http:/
 	.status-menu-container {
 		top: -64px !important;
 		left: -3px;
+	}
+	.status-menu-container:after {
+		right: -15px;
+		transform: none;
 	}
 	.list-menu-float {
 		left: 701px;
