--- a/Clarity Theme/Personalization.css
+++ b/Clarity Theme/Personalization.css
@@ -21,13 +21,13 @@
 	background: #fff;
 	border-radius: 50%;
 	
-	color:#ff65ad;
-	font-size: 0px !important;
+	color: #ff65ad;
+	font-size: 0 !important;
 	line-height: 23px;
 	
 	overflow: hidden;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.2)	
-} .data.tags a[href*="tag\=Favourite"]:after, .data.tags a[href*="tag\=Favorite"]:after { content: "♥"; font-size: 26px !important; }
+	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+} .data.tags a[href*="tag\=Favourite"]:after, .data.tags a[href*="tag\=Favorite"]:after { content: "♥"; font-size: 26px; }
 
 /* Tag Colours */
 
