Minor format update.

--- a/Clarity Theme/Mod - Dark Mode.css
+++ b/Clarity Theme/Mod - Dark Mode.css
@@ -1,4 +1,4 @@
-/* "Clarity" by Valerio Lyndon Modification / Dark Mode / Revision 0 */
+/* "Clarity" Modification by Valerio Lyndon / Dark Mode / Revision 0 */
 
 body { background: #161616 !important; }
 
