--- a/Clarity Theme/Mod - Dark Mode.css
+++ b/Clarity Theme/Mod - Dark Mode.css
@@ -1,4 +1,4 @@
-/* "Clarity" Modification by Valerio Lyndon / Dark Mode / Revision 0 */
+/* "Clarity" Modification by Valerio Lyndon / Dark Mode / Revision 0.1 */
 
 body { background: #161616 !important; }
 
@@ -62,6 +62,7 @@ a, a:hover {
 .data.volume span,
 .data.score select,
 .data.progress input,
+.data.priority,
 .list-table .more-info .more-content a,
 /* Filter Box */
 #advanced-options #fancybox-close
@@ -72,7 +73,10 @@ a, a:hover {
 .header-info a:hover,
 /* General */
 .data.title .link.sort:hover,
-.list-table .more-info .more-content a:hover
+.list-table .more-info .more-content a:hover,
+.data.chapter span:only-of-type:after,
+.data.progress span:only-of-type:after,
+.data.volume span:only-of-type:after
 { color: #416abe !important; }
 
 /* HIGHLIGHT CONTENT BACKGROUND */
